--- a/src/app/quiz/quiz.component.css
+++ b/src/app/quiz/quiz.component.css
@@ -86,13 +86,12 @@
     height: 2rem;
     border: 0.3rem solid #56eb83;
     margin-top: 1.5rem;
-    border-radius: 1.6rem; /* Add border-radius for rounded corners */
-    overflow: hidden; /* Hide overflowing content */
-}
+    border-radius: 1.6rem; 
+    overflow: hidden; }
 
 #progressBarFull {
     height: 3.4rem;
-    background: linear-gradient(90deg, #56eb8f, #3fd6a6); /* Add gradient for a fancier look */
+    background: linear-gradient(90deg, #56eb8f, #3fd6a6); 
     width: 0;
     transition: width 1s ease-in-out;
 }
@@ -102,27 +101,6 @@
     color: #56eb8f;
 }
 
-/* #progressBar {
-    width: 20rem;
-    height: 3.2rem;
-    border: 0.3rem solid #56eb83;
-    margin-top: 1.5rem;
-    transition: width 1s ease-in-out;
-  }
-  
-  #progressBarFull {
-    height: 3.4rem;
-    background-color: #56eb8f;
-    width: 0;
-  } */
-
-  /* .choice-container.correct .choice-text {
-    color: white;
-}
-
-.choice-container.incorrect .choice-text {
-    color: white;
-} */
 
   #loader {
     animation: spinningColor 1.5s ease-in-out infinite;
@@ -157,7 +135,7 @@
       border-bottom:5px dashed #1046a9;
     }
   }
-  /* Responsive Styles */
+
 @media screen and (max-width: 767px) {
   .container {
       width: 100%;
@@ -223,19 +201,17 @@
 }
 
 
-  
-/* quiz.component.css */
 .choice-container.selected {
-    background-color: #ffff99; /* yellow color for selected choice */
+    background-color: #ffff99; 
   }
   
   .choice-container.correct {
-    background-color: #46d257; /* green color for correct choice */
+    background-color: #46d257;
     color: white;
   }
   
   .choice-container.incorrect {
-    background-color: #ee1337; /* red color for incorrect choice */
+    background-color: #ee1337; 
     color: white;
   }
   .next-button-container {
@@ -248,7 +224,7 @@
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
-    background-color: #4caf50; /* green color for the "Next" button */
+    background-color: #4caf50; 
     color: white;
     border: none;
     border-radius: 5px;
